--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,26 @@
-wx:
-  #公众号appid
-  appid: wx8c39f3c5922f3fbb
-  #公众号appsecret
-  appsecret: e383c7403b2a85cb52d407858444a9c9
-  #小程序appid 可选 需要跳转到小程序时添加
-  appletAppid: xxx
-  #小程序appsecret 可选
-  appletAppsecret: xxx
-  #网页授权回调地址
-  redirectUri: axc
+yutool:
+  token: 111
+  wx:
+    redisTokenKey: yutools_wx_access_token1
+    #公众号appid
+    appid: wx4963bb1e114c39ab
+    #公众号appsecret
+    appsecret: 7fd5cb3b583cf5dd7e11e7225fdc04e8
+    #小程序appid 可选 需要跳转到小程序时添加
+    appletAppid: xxx
+    #小程序appsecret 可选
+    appletAppsecret: xxx
+    #网页授权回调地址
+    redirectUri: axc
+
+spring:
+  redis:
+    host: 192.168.8.254
+    password: Abcd.123
+    port: 6379
+    database: 1
+    lettuce:
+      pool:
+        max-idle: 16
+        max-active: 32
+        min-idle: 8
